<resources>
    <string name="app_name">Nusaku</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_cari">Cari</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profil">Profil</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <integer-array name="img_id_arr">
        <item>@drawable/w1</item>
        <item>@drawable/w2</item>
        <item>@drawable/w3</item>
    </integer-array>

</resources>
