<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.nusaku.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.nusaku.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.nusaku.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.example.nusaku.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda" />
    <fragment
        android:id="@+id/navigation_cari"
        android:name="com.example.nusaku.ui.cari.CariFragment"
        android:label="@string/title_cari" />
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.nusaku.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark" />
    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.nusaku.ui.profil.ProfilFragment"
        android:label="@string/title_profil" />
</navigation>