<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/ic_house"
        android:title="@string/title_beranda"/>

    <item
        android:id="@+id/navigation_cari"
        android:icon="@drawable/ic_magnifying_glass"
        android:title="@string/title_cari"/>

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_star"
        android:title="@string/title_bookmark"/>

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_avatar"
        android:title="@string/title_profil"/>

<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="@string/title_home" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

</menu>
